--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,8 @@
+checkout:
+  pre:
+    - git config user.email determinator@deliveroo.co.uk
+    - git config user.name "Determinator CI"
+
 deployment:
   release:
     branch: master
