--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
       - checkout
 
       - run:
+          name: Install bundler
+          command: gem install bundler -v 2.1.4
+
+      - run:
           name: Bundle Install
           command: bundle install
 
@@ -31,6 +35,10 @@ jobs:
       - checkout
 
       - run:
+          name: Install bundler
+          command: gem install bundler -v 2.1.4
+
+      - run:
           name: Bundle Install
           command: bundle install
 
@@ -49,6 +57,10 @@ jobs:
       - image: circleci/ruby:2.6
     steps:
       - checkout
+
+      - run:
+          name: Install bundler
+          command: gem install bundler -v 2.1.4
 
       - run:
           name: Bundle Install
