--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -11,6 +11,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set git user
       run: |
         git config user.email "rooci@deliveroo.co.uk"
         git config user.name "Determinator Release Github Action"
